# CourseWork_2

./: .coverage  pyproject.toml
data/: vacancies.json
src/: job_api.py  json_saver.py  main.py  vacancy.py  vacancy_storage.py
tests/: test_job_api.py  test_json_saver.py  test_vacancy.py  test_vacancy_storage.py
